     ring systems in the builder respectively.

Ongoing Goals

   * fill-out object/coord set specific settings

   * clean-up return conventions in cmd.py

   * complete first-round test-cases

   * feedback conditionals placed around all error output

   * draw all solid representations before drawing lines
     in order to improve antialiasing.

Changes up to 0.58

   * "alter" and "alter_state" given a 50% performance boost

   * added a coarse hydrogen-bond assessment feature (internal)

   * added phi/psi measuring capability to util module

   * fixed selector memory leak on errors

   * added first-generation cartoon riboons 
     (higher-quality to come later)

   * added more specific settings for mesh and ribbon width, etc.

   * add more settings-change side-effects 

   * fix bugs with saving pkl files for state > 1

   * added a concise notation into the selection language 

       model/segment/chain/residue/name
                                 */name
                           residue/
                           residue/name
                     chain/       /     
                     chain/residue/
                     chain/       /name
                     chain/residue/name
             segment/     /       
             segment/     /       /name
             segment/     /residue
             segment/     /residue/name
             segment/chain/       /
             segment/chain/       /name
             segment/chain/residue/
             segment/chain/residue/name
      /model
      /model/       /     /       /name
      /model/       /     /residue
      /model/       /     /residue/name
      /model/       /chain
      /model/       /chain/       /name
      /model/       /chain/residue
      /model/       /chain/residue/name
      /model/segment
      /model/segment/     /       /name
      /model/segment/     /residue
      /model/segment/     /residue/name
      /model/segment/chain
      /model/segment/chain/       /name